# flask-boilerplate

./: .dockerignore  .editorconfig  .flake8  .gitignore  Dockerfile  Makefile  Pipfile  README.md  env.example  mise.toml  pyproject.toml  run.py  run.sh  web.py  worker.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: dependency-review.yaml  tests.yaml
app/: __init__.py  extensions.py
app/auth/: routes.py
app/common/: json_error.py
app/models/: Example.py  __init__.py
app/v1/starter/: __init__.py  routes.py
apps/: __init__.py  extensions.py  utils.py
apps/v1/starter/: routes.py
docs/: config-default.py  supervisord.example.conf
legacy/: README.md  pyproject.toml
legacy/.github/workflows/: tests.yaml
legacy/apps/: extensions.py
legacy/apps/common/: json_error.py
legacy/docs/: supervisord.example.conf
legacy/tests/: __init__.py
logics/: auth_middleware.py  error_handler.py  exceptions.py  webserver.py
tests/: __init__.py  test_api.py  test_sample.py  test_web.py
